--- a/BattlestarGalactica/views/play-game.ejs
+++ b/BattlestarGalactica/views/play-game.ejs
@@ -110,6 +110,28 @@
           }
         });
       }
+
+      function revealToAll(card) {
+        fetch("/reveal-to-all", {
+          method: "POST", // *GET, POST, PUT, DELETE, etc.
+          body: JSON.stringify({
+            card
+          }),
+          mode: "cors", // no-cors, *cors, same-origin
+          cache: "no-cache", // *default, no-cache, reload, force-cache, only-if-cached
+          credentials: "same-origin", // include, *same-origin, omit
+          headers: {
+            "Content-Type": "application/json"
+            // 'Content-Type': 'application/x-www-form-urlencoded',
+          },
+          redirect: "follow", // manual, *follow, error
+          referrer: "no-referrer" // no-referrer, *client
+        }).then(response => {
+          if (response.redirected) {
+            window.location.href = response.url;
+          }
+        });
+      }
     </script>
   </body>
 </html>
