--- a/BattlestarGalactica/views/play-game.ejs
+++ b/BattlestarGalactica/views/play-game.ejs
@@ -26,8 +26,8 @@
     <div class="container d-flex flex-column justify-content-start flex-fill">
       <ul class="list-group bg-transparent list-group-flush">
         <% if (myPlayer.name !== undefined) {%>
-        <%-include('Components/my-player', { "player": myPlayer}) %> <%
-        otherPlayers.forEach(function(player){ %>
+        <%-include('Components/my-player', { "player": myPlayer,
+        "execution":execution}) %> <% otherPlayers.forEach(function(player){ %>
         <%-include('Components/other-player', { "player": player}) %> <%});%>
         <%}else{%>
         <div class="text-center font-weight-bold display-3 my-5">
@@ -117,6 +117,25 @@
           body: JSON.stringify({
             card
           }),
+          mode: "cors", // no-cors, *cors, same-origin
+          cache: "no-cache", // *default, no-cache, reload, force-cache, only-if-cached
+          credentials: "same-origin", // include, *same-origin, omit
+          headers: {
+            "Content-Type": "application/json"
+            // 'Content-Type': 'application/x-www-form-urlencoded',
+          },
+          redirect: "follow", // manual, *follow, error
+          referrer: "no-referrer" // no-referrer, *client
+        }).then(response => {
+          if (response.redirected) {
+            window.location.href = response.url;
+          }
+        });
+      }
+
+      function execute() {
+        fetch("/execute", {
+          method: "POST", // *GET, POST, PUT, DELETE, etc.
           mode: "cors", // no-cors, *cors, same-origin
           cache: "no-cache", // *default, no-cache, reload, force-cache, only-if-cached
           credentials: "same-origin", // include, *same-origin, omit
